--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  google_fonts: ^7.0.0
+
   # State Management (Riverpod v2.6 is the stable choice for Isar v3)
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.3.5
@@ -24,17 +26,18 @@ dependencies:
   usb_serial: ^0.5.2 # For Mobile (Android OTG)
 
   # UI & Charts
-  fl_chart: ^0.66.2
-  intl: ^0.19.0 # For Date Formatting
+  fl_chart: ^1.1.1
+  intl: ^0.20.2 # For Date Formatting
   gap: ^3.0.0 # For easier layout spacing
 
   # Data Parsing
   json_annotation: ^4.9.0
+  shared_preferences: 2.5.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
   build_runner: 2.4.13  
   isar_generator: 3.1.0+1
@@ -42,6 +45,3 @@ dev_dependencies:
   json_serializable: 6.8.0
 
   analyzer: ">=5.13.0 <6.0.0"
-
-
-
